Layout changes following datatracker style.

--- a/code_requests.html
+++ b/code_requests.html
@@ -206,7 +206,7 @@
                       		<div style="margin-left:15px">
 		                        <p>A paragraph describing the offered implementation. A paragraph describing the offered implementation. A paragraph describing the offered implementation. A paragraph describing the offered implementation. A paragraph describing the offered implementation. A paragraph describing the offered implementation.</p>
 		                        <ul class="nav nav-pills" >
-		                        	<li class="dropdown dropdown-big">
+		                        	<li class="">
 		                        		 <a href="#myModal" class="btn btn-info btn-xs" style="padding:1px 5px" data-toggle="modal"><i class="fa fa-check"></i> Associate my project</a>
 		                        	</li>
 			                        <li class="dropdown dropdown-big">
